# AutoFL

./: .gitignore  .mclientCL.py.swp  README.md  main.py  mclientCL.py  mclmain.py  mclmain_async.py  mclserver.py  pyproject.toml  requirements.txt  testmclientCL.py  wandbtest.py
algorithms/: __init__.py  fedcprompt.py  fedet.py  fedgem.py  fedma.py  fedproto.py  fedrcil.py  fedrep.py  fedweit.py  latency_strategies.py  plora.py  sacfl.py  stamp.py
clients/: __init__.py  async_client.py  benchmark_adapter.py  flower_client.py  sync_client.py
clutils/: ParamFns.py  clstrat.py  create_benchmarks.py  make_experiences.py  scallbacks.py
config/: config.yaml
datasets/: prepare_datasets.py
documentation/: additional_continual_learning.md  domain_incremental_workloads.md  gpu_usage.md  latency_simulation.md
logs/: avalog.txt
models/: MobileNet.py  ResNet.py  ResnetModel.py  SimpleCNN.py  WideResNet.py  __init__.py  mobilenet.py  resnet.py  simple_cnn.py  wide_resnet.py
oldcl/: clientCL.py  clmain.py  clserver.py
oldfl/: client.py  main.py  server.py
oldutils/: ParamFns.py  TrainTestFns.py
omnet-data/: analyze_latency.py  plot_latency_comparison.py
runners/: async_runner.py  lora_async_runner.py  merge_async_runner.py  strategy_factory.py  sync_runner.py  thread_async_runner.py  true_async_runner.py
tests/: README.md  test_async_fl.py  test_cifar10_training.py  test_config_system.py  test_data_partioner.py  test_fedweit_integration.py  test_fedweit_minimal.py  test_fedweit_split_cifar10.py  test_hydra_config.py  test_model_factory.py  test_plora_cifar10.py  (+8 more)
(+97 files in other folders)
